[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "langchain_sarvam"
version = "0.1.1"
description = "An integration package connecting sarvam-AI and LangChain"
authors = [{ name = "Parth1609", email = "parthgajananpatil@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["langchain", "sarvam", "ai", "chat", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "langchain-core>=1.2.17",
    "sarvamai>=0.1.25",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/parth1609/langchain_sarvam"
Repository = "https://github.com/parth1609/langchain_sarvam"


[tool.hatch.build.targets.wheel]
packages = ["langchain_sarvam"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-socket>=0.7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "langchain-tests>=0.3.11",
]
lint = ["ruff>=0.3.0", "mypy>=1.9.0"]
